--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,10 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+
+    <string name="input_address">Server address</string>
+    <string name="input_username">Username</string>
+    <string name="input_password">Password</string>
+
+    <string name="error_no_connection">No connection</string>
 </resources>
