--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,15 @@
     <string name="input_password">Password</string>
 
     <string name="error_no_connection">No connection</string>
+    <string name="title_activity_home">HomeActivity</string>
+
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="drawer_open">Open</string>
+    <string name="drawer_close">Close</string>
+    
+    <string-array name="drawerItems">
+        <item>Home</item>
+        <item>Shop</item>
+    </string-array>
 </resources>
