--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="input_password">Password</string>
 
     <string name="error_no_connection">No connection</string>
-    <string name="title_activity_home">HomeActivity</string>
+    <string name="title_activity_home">Shop</string>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
