--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,5 +35,7 @@
     <string name="large_text">
         "WIP"
     </string>
+    <string name="title_activity_select_account">SelectAccountActivity</string>
+    <string name="account_delete">Delete account</string>
 
 </resources>
